[project]
name = "mcp-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.0",
    "gradio>=5.33.2",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
